tests/ui/let-else/let-else-allow-in-expr.stderr
error: unused variable: `x`
  --> $DIR/let-else-allow-in-expr.rs:5:13
   |
LL |         let x = 1;
   |             ^
   |
note: the lint level is defined here
  --> $DIR/let-else-allow-in-expr.rs:1:9
   |
LL | #![deny(unused_variables)]
   |         ^^^^^^^^^^^^^^^^
help: if this is intentional, prefix it with an underscore
   |
LL |         let _x = 1;
   |             ~~

error: unused variable: `x`
  --> $DIR/let-else-allow-in-expr.rs:27:9
   |
LL |     let x = 1;
   |         ^
   |
help: if this is intentional, prefix it with an underscore
   |
LL |     let _x = 1;
   |         ~~

error: aborting due to 2 previous errors

